# drawio

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  ChangeLog  README.md  package.json  rdfexport
src/main/webapp/plugins/rdfexport/: .gitignore  .prettierignore  .readthedocs.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  README.md  build.ts  drawio_meta.py  eslint.config.js  menu.yml  package.json  pyproject.toml  tsconfig.json  tsconfig.patchCopiedPluginMenu.json
src/main/webapp/plugins/rdfexport/aicode/: AGENTS.md  CHANGELOG.md
src/main/webapp/plugins/rdfexport/aicode/.context/: AGENTS.md  CHANGELOG.md
src/main/webapp/plugins/rdfexport/aicode/.reports/: codex-report-20250916T155224Z.md  gpt-5-codex-report-20250214T120000Z.md  gpt-5-codex-report-20250219T000000Z.md  gpt-5-codex-report-20250220T120000Z.md  (+3 more)
src/main/webapp/plugins/rdfexport/debug/: __main__.py  debug_cli_regression.py  map.json  run_rmlmapper_workflows.py  run_scenario.ts
src/main/webapp/plugins/rdfexport/legacy/: __init__.py  draw_io_parser.py  map_rml.py  map_schema.py  test_draw_io_parser.py
src/main/webapp/plugins/rdfexport/meta_builder/: __init__.py  __main__.py  drawio_meta_builder.py  override.py  readme.md
src/main/webapp/plugins/rdfexport/next/: py314Runtime.ts
src/main/webapp/plugins/rdfexport/pyodide_pipeline/: __init__.py  csv_normalizer.py  drawio_pipeline.py
src/main/webapp/plugins/rdfexport/rmlmapper_workflows/: __init__.py  clean_rr_terms.py  map_schema_workflow.py  pipeline_workflow.py  rr_terms.json
src/main/webapp/plugins/rdfexport/scripts/: clean_rr_terms.py  dotReporter.ts  download_pyodide_assets.sh  setup_rmlmapper.sh  test_legacy.sh
src/main/webapp/plugins/rdfexport/src/: logging.ts  mockBlackBox.ts  pyodideRuntime.ts  rdfexport.ts
src/main/webapp/plugins/rdfexport/tests/: rdfexport.test.ts  test_fixture_sanitizer.py  test_source_csv_preprocessor.py
(+792 files in other folders)
