[project]
name = "DrawRDF"
version = "0.1.0"
description = "A draw.io plugin that adds an option to export diagrams to RDF graphs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "rdflib>=7.4.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "pydantic>=2.12.4",
]

docs = [
    "sphinx==7.3.7",
    "myst-parser>=4.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.2.3",
    "linkify-it-py>=2.0.3",
    "sphinxcontrib-youtube>=1.4.1",
]

[tool.ruff]
exclude = [
    "python_core/src/legacy/",
    "docs/",
    "aicode/docs/",
    "data/",
]

[tool.pytest.ini_options]
pythonpath = ["."]
